<resources>
    <string name="app_name">Sesly</string>
    <string name="let_s_start_with_your_interests">Let\'s Start with Your Interests</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_few_information_about_you">A Few Information About You</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="complete">Complete</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="select_voice">Select Voice</string>
    <string name="you_are_not_following_anyone_let_s_discover_new_channels">You are not following anyone. Let\'s discover new channels.</string>
    <string name="options">Options</string>
    <string name="here_the_most_popular_posts_according_to_your_country_will_be_displayed">Here, the most popular posts according to your country will be displayed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="private_profile">Private Profile</string>
    <string name="bu_hesap_gizlidir_payla_mlar_g_rmek_i_in_takip_edin">This account is private. Follow to see the voices.</string>
    <string name="download_voice">Download Voice</string>
    <string name="share_voice">Share Voice</string>
    <string name="top_rated">Top Rated</string>
    <string name="most_listened">Most Listened</string>
    <string name="favorites">Favorites</string>
    <string name="sign_out">Sign Out</string>
    <string name="biography">Biography</string>
    <string name="type_here">Type here</string>
    <string name="title">Title</string>
    <string name="my_likes">My Likes</string>
    <string name="no_internet_connection_found">No Internet Connection Found</string>
    <string name="please_try_again">Please Try Again</string>
    <string name="change_theme">Change Theme</string>
    <string name="search">Search</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="report_voice">Report Voice</string>

    <string name="sesly">Sesly</string>
    <string name="get_premium">Get Premium</string>
    <string name="buy">Buy</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="show_my_country">Show My Country</string>
    <string name="show_my_join_date">Show My Join Date</string>
    <string name="premiumInfo">•You can download the voices to your phone.\n\n•An orange checkmark will appear at the end of your name, indicating that your account has been approved.\n\n•This is a one-time payment.</string>
</resources>