<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"/>



    </androidx.appcompat.widget.Toolbar>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"

                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biography"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp"
                    android:id="@+id/bioEt"
                    android:hint="@string/type_here"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/rect_border"

                    android:padding="@dimen/_8sdp"
                    android:gravity="start"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:fontFamily="@font/montserrat"
                    android:maxLength="80"/>

                <TextView
                    android:id="@+id/characterCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_gravity="end"
                    android:textColor="@color/black" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_information"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstNameEt"
                    android:hint="@string/first_name"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_8sdp"
                    android:background="@drawable/rect_border"
                    android:gravity="start"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:fontFamily="@font/montserrat"
                    android:maxLength="15"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastNameEt"
                    android:hint="@string/last_name"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_8sdp"
                    android:gravity="start"
                    android:background="@drawable/rect_border"

                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:fontFamily="@font/montserrat"
                    android:maxLength="15"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/usernameEt"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_8sdp"
                    android:gravity="start"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/rect_border"
                    android:text="@string/username"

                    android:fontFamily="@font/montserrat"
                    android:maxLength="15"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailEt"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/email"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_8sdp"
                    android:background="@drawable/rect_border"
                    android:gravity="start"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:fontFamily="@font/montserrat"
                    />
                

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/private_profile"
                    android:buttonTint="@color/white"
                    android:id="@+id/privateProfile"
                    android:textColor="@color/white"
                    app:thumbTint="@color/white"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat"/>


            </LinearLayout>

            
            
            

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat"
                android:layout_margin="@dimen/_15sdp"
                android:id="@+id/saveBtn"/>

        </LinearLayout>



    </androidx.core.widget.NestedScrollView>






</LinearLayout>