<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".activity.LoginActivity">


    <LinearLayout
        android:id="@+id/loginInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/showLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/login"
            android:background="@drawable/rect_border"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/alata"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/showRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:background="@drawable/rect_border"
            android:padding="@dimen/_7sdp"
            android:text="@string/register"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/alata"

            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginInfoLayout"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_3sdp"
        app:cardElevation="@dimen/_3sdp"
        app:cardUseCompatPadding="true"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                android:layout_margin="@dimen/_8sdp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/emailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_border"
                    android:backgroundTint="@color/black"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/black"
                    android:fontFamily="@font/alata"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp" />


                <EditText
                    android:id="@+id/passwordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/rect_border"
                    android:backgroundTint="@color/black"
                    android:drawableStart="@drawable/ic_baseline_password_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/black"
                    android:fontFamily="@font/alata"

                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp" />


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="@color/appOrange"

                    android:fontFamily="@font/alata"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="?android:selectableItemBackground"
                    android:fontFamily="@font/alata"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </ScrollView>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginInfoLayout"
        android:layout_centerInParent="true"
        android:id="@+id/registerLayout"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_3sdp"
        app:cardElevation="@dimen/_3sdp"
        app:cardUseCompatPadding="true"
        >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                android:layout_margin="@dimen/_8sdp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/firstNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/black"
                    android:hint="First Name"
                    android:fontFamily="@font/alata"
                    android:background="@drawable/rect_border"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/black"
                    android:layout_marginTop="@dimen/_2sdp"

                    android:maxLines="1"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>




                <EditText
                    android:id="@+id/lastNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/black"
                    android:hint="Last Name"
                    android:fontFamily="@font/alata"
                    android:background="@drawable/rect_border"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/black"
                    android:layout_marginTop="@dimen/_8sdp"

                    android:maxLines="1"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>






                <EditText
                    android:id="@+id/emailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/black"
                    android:hint="@string/email"
                    android:fontFamily="@font/alata"
                    android:background="@drawable/rect_border"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/black"
                    android:layout_marginTop="@dimen/_8sdp"

                    android:maxLines="1"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>




                <EditText
                    android:id="@+id/passwordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_baseline_password_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/black"
                    android:backgroundTint="@color/black"

                    android:hint="@string/password"
                    android:fontFamily="@font/alata"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/rect_border"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textSize="15sp" />



                <EditText
                    android:id="@+id/usernameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/black"
                    android:hint="@string/username"
                    android:fontFamily="@font/alata"
                    android:backgroundTint="@color/black"

                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/rect_border"
                    android:maxLines="1"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                    android:id="@+id/countrySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:smsp_isSearchable="true"
                    app:smsp_floatingLabelColor="#1976D2"
                    app:smsp_hintSize="16sp"
                    app:smsp_floatingLabelText="Topic"
                    app:smsp_hint="Country"
                    app:smsp_hintColor="#F4511E"
                    app:smsp_itemColor="#512DA8"
                    app:smsp_itemListColor="#7C4DFF"
                    app:smsp_itemListHintBackgroundColor="#808080"
                    app:smsp_itemListHintColor="#FFFFFF"
                    app:smsp_multilineError="false"
                    app:smsp_selectedItemListColor="#FF5252" />




                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="@color/appOrange"
                    android:fontFamily="@font/alata"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
                

            </LinearLayout>


        </ScrollView>

    </androidx.cardview.widget.CardView>




</RelativeLayout>